--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -53,7 +53,7 @@
                     <a href="about.html" th:text="${'Create Post'}" th:href="@{/postCreate}">About</a>
                 </li>
                 <li>
-                    <a href="contact.html" th:text="${'Contact'}" th:href="@{/contact}">Contact</a>
+                    <a href="https://github.com/stephensjlee/spring-boot-sample-blog">Github</a>
                 </li>
             </ul>
         </div>
